--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "legal-document-analyser",
+  "homepage": "https://jerryjohnsoffl.github.io/legal-document-analyser",
   "private": true,
   "version": "0.0.0",
   "type": "module",
